--- a/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
+++ b/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
@@ -21,7 +21,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected. Call `.close()` to terminate connection gracefully.\n"
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>5</td><td>application_1634566917647_0007</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1634566917647_0007/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1634566917647_0007_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n",
+      "Connected. Call `.close()` to terminate connection gracefully."
      ]
     }
    ],
@@ -99,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,36 +167,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'date', 'dept', 'store'}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'store', 'date', 'dept'}"
+     ]
     }
    ],
    "source": [
     "#`init_prepared_statement` method is needed to get serving_keys in case `get_serving_vector` has not beed called yet. This is not necessary for `get_serving_vector` method itself\n",
     "td_meta.init_prepared_statement() \n",
     "td_meta.serving_keys"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "td_meta.serving_batch_size is not None and td_meta.serving_batch_size > 1\n",
-    "entry = {'store': 31,'date': \"2010-02-05\", 'dept': 47}\n",
-    "list(entry.values())[0]\n",
-    "hasattr(list(entry.values())[0], \"__iter__\")\n",
-    "entry = {'store': 31,'date': \"2010-02-05\", 'dept': 47}\n",
-    "entry = {'store': [32,2,20,4,12],\n",
-    " 'date':  [\"2010-02-05\", \"2010-02-12\", \"2010-03-05\", \"2010-04-02\", \"2010-05-07\"],\n",
-    " 'dept': [47, 92, 11, 52, 27]}\n",
-    "\n",
-    "hasattr(entry.values(), \"__iter__\")"
    ]
   },
   {
@@ -238,18 +240,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'date', 'dept', 'store'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'store', 'date', 'dept'}"
+     ]
     }
    ],
    "source": [
-    "td_meta.init_prepared_statement(batch_size=5) \n",
+    "td_meta.init_prepared_statement(batch=True) \n",
     "td_meta.serving_keys"
    ]
   },
@@ -276,21 +275,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
